Fixed responsiveness on mobile devices

--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -5,13 +5,10 @@
 
 .login-form {
   background-color: rgba(113, 120, 148, 0.8);
-  width: 40%;
 }
 
 .login-quote {
   margin-bottom: 5em;
-  -webkit-mask-image: linear-gradient(#000, rgba(0, 0, 0, 0.3));
-  mask-image: linear-gradient(#000, rgba(0, 0, 0, 0.3));
 }
 
 .login-image {
